# python-template

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  skeleton.py  test_sample.py
.github/workflows/: dependabot-auto-merge.yml  test.yml
test/: test_sample.py
